Fixed goal cards from dashbord not showing the current progress of the goal correctly

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,11 @@
   color: white;
   font-family: "Roboto", sans-serif;
 }
-
+html{
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
 
 /* navigation */
 nav{
@@ -13,6 +17,7 @@ nav{
   height: 75px;
   position: fixed;
   bottom: 0px;
+  left: 0px;
   display: flex;
   align-items: center;
   border-top: 1px solid rgba(211, 211, 211, 0.1);
@@ -91,11 +96,10 @@ nav{
 
 .page{
   background-color: #111214;
-  height: 100vh;
+  height: calc(100vh - 75px);
   overflow-y: auto;
   width: 100vw;
   padding: 20px 15px;
-  padding-bottom: 100px;
 }
 .danger{
   background-color: #FF0000;
